vbnc/vbnc/vbnc/tests/Errors/32006.vb
Class T
    Const M_Byte_Char As Byte = "1"c
End Class